--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<div class="section-two-image-container">
 					<div class="feature-item">
 						<img src="https://images.unsplash.com/photo-1510665724063-f77a01074aa2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fGJ1cmolMjBraGFsaWZhfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60" alt="punk with blach hair and red and blue glasses" class="feature-image">
-						<p>A truly luxurius arquetectural masterpiece in the middle of the.</p>
+						<p>A truly luxurius arquetectural masterpiece.</p>
 					</div>
 					<div class="feature-item">
 						<img src="https://images.unsplash.com/photo-1553872047-3015c92c4570?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fG9mZmljZSUyMHRvd2VyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60" alt="Seven items from a game listed in white on a black background" class="feature-image">
