--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				</div>
 				<a href="#" class="btn btn-light">About Us</a>
 				<a href="#" class="btn btn-mid">Contact</a>
-				<p>Contact us and get inspired to invest in the world's best properties</p>
+				<p>Contact us and get inspired to invest in the world's best properties.</p>
 			</div>
 		</section>
 			
